diss: bibfiles one first name

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -68,8 +68,7 @@
   title = {Imprecision in Statistical Theory and Practice},
   publisher = {Grace Scientific Publishing LLC},
   year = {2009},
-  author = {Coolen-Schrijner, P. and Coolen, F. and Troffaes, M. and Augustin,
-    T. and Gupta, S. },
+  author = {Coolen-Schrijner, P. and Coolen, F. and Troffaes, M. and Augustin, T. and Gupta, S. },
   address = {Greensboro, NC, USA }
 }
 
@@ -98,7 +97,8 @@
 
 @INPROCEEDINGS{Walter2011a,
   author = {Gero Walter and Thomas Augustin and Frank P.A. Coolen},
-  editor = {Frank P.A. Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
+  longeditor = {Frank P. A. Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
+  editor = {Frank Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
   year = 2011,
   title = {On Prior-Data Conflict in Predictive Bernoulli Inferences},
   booktitle = {ISIPTA'11: Proceedings of the Seventh International Symposium on
@@ -109,7 +109,8 @@
 }
 
 @INPROCEEDINGS{Troffaes2012a,
-  author = {Matthias C. M. Troffaes and Dana L. Kelly and Gero Walter},
+  longauthor = {Matthias C. M. Troffaes and Dana L. Kelly and Gero Walter},
+  author = {Matthias Troffaes and Dana Kelly and Gero Walter},
   editor = {},
   year = 2012,
   title = {Imprecise {Dirichlet} model for common-cause failure},
@@ -130,24 +131,27 @@
 }
 
 @misc{Troffaes2013a,
-    Author = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
+    Longauthor = {Matthias C. M. Troffaes and Gero Walter and Dana L. Kelly},
+    Author = {Matthias Troffaes and Gero Walter and Dana Kelly},
     Title = {A Robust {B}ayesian Approach to Modelling Epistemic Uncertainty in Common-Cause Failure Models},
     note = {Accepted for publication at: Reliability Engineering \& System Safety},
     Pages = {},
     Volume = {},
-    Month = {1},
+    noMonth = {1},
     Year = {2013},
     howpublished = {Preprint available at \url{http://arxiv.org/abs/1301.0533}},
 }
 
 @incollection{itip-statinf,
-    author    = "Thomas Augustin and Gero Walter and Frank P.A. Coolen",
+    longauthor    = "Thomas Augustin and Gero Walter and Frank P. A. Coolen",
+    author    = "Thomas Augustin and Gero Walter and Frank Coolen",
     title     = "Statistical Inference",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @collection{itip,
@@ -155,5 +159,6 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
