--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -45,7 +45,8 @@
 
 @book{2002:casella,
   title={Statistical Inference},
-  author={Casella, G. and Berger, R.L.},
+  longauthor={Casella, G. and Berger, R.L.},
+  author={Casella, G. and Berger, R.},
   isbn={9780534243128},
   lccn={89027287},
   series={Duxbury advanced series in statistics and decision sciences},
@@ -224,7 +225,7 @@
 
 @ARTICLE{1994:berger,
   author = {Berger, J. and Moreno, E. and Pericchi, L. and Bayarri, M. and Bernardo,
-	J. M. and Cano, J. and De la Horra, J. and Mart{\'\i}n, J. and R{\'\i}os-Ins{\'u}a,
+	J. M. and Cano, J. and De la Horra, J. and Mart{\'\i}n, J. and R{\'\i}os Ins{\'u}a,
 	D. and Betr{\`o}, B. and Dasgupta, A. and Gustafson, P. and Wasserman,
 	L. and Kadane, J. and Srinivasan, C. and Lavine, M. and O'Hagan,
 	A. and Polasek, W. and Robert, C. and Goutis, C. and Ruggeri, F.
@@ -492,7 +493,8 @@
 }
 
 @article{1993:coolen,
-  author = "Frank P.A. Coolen",
+  longauthor = "Frank P. A. Coolen",
+  author = "Frank Coolen",
   title = "Imprecise conjugate prior densities for the one-parameter exponential family of distributions",
   journal = "Statistics \& Probability Letters",
   volume = "16",
@@ -559,7 +561,7 @@
     Address = {Waterloo},
     Author = {Augustin, T.},
     Booktitle = {ISIPTA '03: Proceedings of the Third International Symposium on Imprecise Probabilities and their Applications},
-    Editor = {Bernard, J. and Seidenfeld, T. and Zaffalon, M.},
+    Editor = {Bernard, J.-M. and Seidenfeld, T. and Zaffalon, M.},
     Pages = {31--45},
     Publisher = {Carleton Scientific},
     Title = {On the suboptimality of the generalized {B}ayes rule and robust {B}ayesian procedures from the decision theoretic point of view: {A} cautionary note on updating imprecise priors},
@@ -637,7 +639,8 @@
     Year = {1998}}
 
 @ARTICLE{2009:Troffaes:Coolen,
-  author = {Troffaes, M.C.M. and Coolen, F.P.A.},
+  longauthor = {Troffaes, M.C.M. and Coolen, F.P.A.},
+  author = {Troffaes, M. and Coolen, F.},
   title = {Applying the Imprecise {D}irichlet Model in cases with partial observations
     and dependencies in failure data},
   journal = {International Journal of Approximate Reasoning},
@@ -713,7 +716,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-structural,
@@ -723,7 +727,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-special,
@@ -733,7 +738,8 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-other,
@@ -743,28 +749,31 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-decision,
-    author    = "Nathan Huntley and Robert Hable and Matthias C.M. Troffaes",
+    longauthor    = "Nathan Huntley and Robert Hable and Matthias C.M. Troffaes",
+    author    = "Nathan Huntley and Robert Hable and Matthias Troffaes",
     title     = "Decision Making",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-ipgms,
-    oldauthor    = "Alessandro Antonucci and Cassio P. de Campos and Marco Zaffalon",
+    longauthor    = "Alessandro Antonucci and Cassio P. de Campos and Marco Zaffalon",
     author    = "Alessandro Antonucci and Cassio de Campos and Marco Zaffalon",
     title     = "Probabilistic Graphical Models",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    oldeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
     editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
@@ -775,17 +784,20 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-computation,
-    author    = "Matthias C.M. Troffaes and Robert Hable",
+    longauthor    = "Matthias C. M. Troffaes and Robert Hable",
+    author    = "Matthias Troffaes and Robert Hable",
     title     = "Computation",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-elicitation,
@@ -795,6 +807,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
