--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -1,6 +1,6 @@
 @book {MR2370506,
-    AUTHOR = {Rao, C.R. and Toutenburg, H. and Shalabh and
-              Heumann, C.},
+    LONGAUTHOR = {Rao, C.R. and Toutenburg, H. and Shalabh and Heumann, C.},
+    AUTHOR = {Rao, C. and Toutenburg, H. and Shalabh and Heumann, C.},
      TITLE = {Linear Models and Generalizations},
       NOTE = {With contributions by Michael Schomaker},
  PUBLISHER = {Springer},
@@ -29,7 +29,8 @@
 }
 
 @book{2007:robert,
-   author={Robert, Christian P.},
+   longauthor={Robert, Christian P.},
+   author={Robert, Christian},
    title={The {Bayesian} choice: from decision-theoretic foundations to computational implementation},
    address={New York, NY},
    publisher={Springer},
@@ -49,7 +50,8 @@
 }
 
 @book{2005:walker,
-   author={Walker, J. Samuel},
+   longauthor={Walker, J. Samuel},
+   author={Walker, Samuel},
    title={Three Mile Island: a nuclear crisis in historical perspective},
    address={Berkeley},
    publisher={Univ. of California Press},
@@ -58,7 +60,8 @@
 }
 
 @techreport{1988:mosleh::common:cause,
-  author = {Mosleh, A. and Fleming, K. N. and Parry, G. W. and Paula, H. M. and Worledge, D. H. and Rasmuson, D. M.},
+  longauthor = {Mosleh, A. and Fleming, K. N. and Parry, G. W. and Paula, H. M. and Worledge, D. H. and Rasmuson, D. M.},
+  author = {Mosleh, A. and Fleming, K. and Parry, G. and Paula, H. and Worledge, D. and Rasmuson, D.},
   title = {Procedures for treating common cause failures in safety and reliability studies: Procedural framework and examples},
   institution = {PLG Inc.},
   year = {1988},
@@ -68,7 +71,8 @@
 }
 
 @techreport{2011:iaea::report,
-  author = {Weightman, Michael and Jamet, Philippe and Lyons, James E. and Samaddar, Sujit},
+  longauthor = {Weightman, Michael and Jamet, Philippe and Lyons, James E. and Samaddar, Sujit},
+  author = {Weightman, Michael and Jamet, Philippe and Lyons, James and Samaddar, Sujit},
   title = {{IAEA} International Fact Finding Expert Mission of the {Fukushima Dai-Ichi} {NPP} Accident Following the Great East {Japan} Earthquake and Tsunami},
   institution = {International Atomic Energy Agency},
   year = {2011},
@@ -108,7 +112,8 @@ note = "",
 issn = "0951-8320",
 doi = "10.1016/0951-8320(95)00016-U",
 url = "http://www.sciencedirect.com/science/article/pii/095183209500016U",
-author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore and J.A. Murphy and U. Schmocker"
+longauthor = "W. F. Werner and M. Hirano and S. Kondo and G. Johanson and J. M. Lanore and J. A. Murphy and U. Schmocker",
+author = "W. Werner and M. Hirano and S. Kondo and G. Johanson and J. Lanore and J. Murphy and U. Schmocker"
 }
 
 @article{2011:kelly:atwood,
@@ -125,7 +130,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{1996:atwood,
-  author = {Atwood, C. L.},
+  longauthor = {Atwood, C. L.},
+  author = {Atwood, C.},
   title = {Constrained noninformative priors in risk assessment},
   journal = {Reliability Engineering and System Safety},
   year = {1996},
@@ -139,26 +145,19 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @book{1965:good,
-  author = {I. J. Good},
-  alteditor = {},
+  longauthor = {I. J. Good},
+  author = {I. Good},
   title = {The estimation of probabilities},
   publisher = {MIT Press},
   year = {1965},
-  optkey = {},
-  optvolume = {},
-  optnumber = {},
-  optseries = {},
   address = {Cambridge (MA)},
-  optedition = {},
-  optmonth = {},
-  optnote = {},
-  optannote = {}
 }
 
 @proceedings{csni86-115,
   title = {{CSNI} Specialist Meeting on Operating Experience Relating to On-Site Electric Power Sources},
   year = {1986},
-  editor = {Ishack, G. and Fourest, B. and Kotthoff, K. and Macleod, J.S. and Baranowsky, P. and Morimoto, K.},
+  longeditor = {Ishack, G. and Fourest, B. and Kotthoff, K. and Macleod, J. S. and Baranowsky, P. and Morimoto, K.},
+  editor = {Ishack, G. and Fourest, B. and Kotthoff, K. and Macleod, J. and Baranowsky, P. and Morimoto, K.},
   publisher = {OECD Nuclear Energy Agency},
   note = {CSNI Report No.~115},
   month = {2},
@@ -166,7 +165,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{1995:kass-raftery,
-  author = {Robert E. Kass and Adrian E. Raftery},
+  longauthor = {Robert E. Kass and Adrian E. Raftery},
+  author = {Robert Kass and Adrian Raftery},
   title = {{B}ayes factors},
   journal = {Journal of the American Statistical Association},
   year = {1995},
@@ -177,7 +177,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 
     @article{2005:hsu-bhatt,
      title = {Neural Systems Responding to Degrees of Uncertainty in Human Decision-Making},
-     author = {Hsu, Ming and Bhatt, Meghana and Adolphs, Ralph and Tranel, Daniel and Camerer, Colin F.},
+     longauthor = {Hsu, Ming and Bhatt, Meghana and Adolphs, Ralph and Tranel, Daniel and Camerer, Colin F.},
+     author = {Hsu, Ming and Bhatt, Meghana and Adolphs, Ralph and Tranel, Daniel and Camerer, Colin},
      journal = {Science},
      volume = {310},
      number = {5754},
@@ -200,7 +201,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{1987:lindley,
-  author = {Dennis V. Lindley},
+  longauthor = {Dennis V. Lindley},
+  author = {Dennis Lindley},
   title = {The Probability Approach to the Treatment of Uncertainty in Artificial Intelligence and Expert Systems},
   journal = {Statistical Science},
   year = {1987},
@@ -219,7 +221,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @inreference{2011:IESS-ip,
-  author = {Frank P.A. Coolen and Matthias M.C. Troffaes and Thomas Augustin},
+  longauthor = {Frank P. A. Coolen and Matthias M. C. Troffaes and Thomas Augustin},
+  author = {Frank Coolen and Matthias Troffaes and Thomas Augustin},
   title = {Imprecise Probability},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
@@ -229,7 +232,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @inreference{2011:IESS-fiducial,
-  author = {Jan Hannig and Hari Yver and Thomas C.M. Lee},
+  longauthor = {Jan Hannig and Hari Yver and Thomas C. M. Lee},
+  author = {Jan Hannig and Hari Yver and Thomas Lee},
   title = {Fiducial Inference},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
@@ -239,7 +243,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @inreference{2011:IESS-npi,
-  author = {Frank P.A. Coolen},
+  longauthor = {Frank P. A. Coolen},
+  author = {Frank Coolen},
   title = {Nonparametric Predictive Inference},
   editor = {Lovric, Miodrag},
   booktitle = {International Encyclopedia of Statistical Science},
@@ -249,7 +254,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{1981:derobertis,
-  author = {DeRobertis, L. and Hartigan, J.A.},
+  longauthor = {DeRobertis, L. and Hartigan, J. A.},
+  author = {DeRobertis, L. and Hartigan, J.},
   title = {Bayesian Inference using intervals of measures},
   journal = {The Annals of Statistics},
   year = {1981},
@@ -267,7 +273,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @book{1976:shortliffe,
-   author={Shortliffe, Edward Hance},
+   longauthor={Shortliffe, Edward Hance},
+   author={Shortliffe, Edward},
    title={Computer-based medical consultations: {MYCIN}},
    year={1976},
    ISBN={0-4440-0179-4},
@@ -276,7 +283,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @book {1999:klir,
-    AUTHOR = {Klir, George J. and Wierman, Mark J.},
+    LONGAUTHOR = {Klir, George J. and Wierman, Mark J.},
+    AUTHOR = {Klir, George and Wierman, Mark},
      TITLE = {Uncertainty-based Information. Elements of Generalized Information Theory},
  PUBLISHER = {Physika},
    ADDRESS = {Heidelberg},
@@ -285,15 +293,15 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 
 @COLLECTION{2006:lawry,
   title = {Soft Methods in Integrated Uncertainty Modelling},
-  editor = {Lawry, J. and Miranda, E. and Bugarin, A. and Li, S. and Gil, M.
-    and Grzegiorzewski, P. and Hryniewicz, O.},
+  editor = {Lawry, J. and Miranda, E. and Bugarin, A. and Li, S. and Gil, M. and Grzegiorzewski, P. and Hryniewicz, O.},
   publisher = {Springer},
   address = {Berlin/Heidelberg},
   year = {2006},
 }
 
 @article{1958:kaplan,
-  author = {Kaplan, E.L. and Meier, P.},
+  longauthor = {Kaplan, E. L. and Meier, P.},
+  author = {Kaplan, E. and Meier, P.},
   title = {Nonparametric Estimation from Incomplete Observations},
   journal = {Journal of the American Statistical Association},
   year = {1958},
@@ -302,7 +310,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{2000:priebe,
-  author = {Carey E. Priebe and David J. Marchette},
+  longauthor = {Carey E. Priebe and David J. Marchette},
+  author = {Carey Priebe and David Marchette},
   title = {Alternating Kernel and Mixture Density Estimation},
   journal = {Computational Statistics \& Data Analysis},
   year = {2000},
@@ -320,7 +329,8 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
 }
 
 @article{2005:whitcomb,
-  author = {Whitcomb, Kathleen M.},
+  longauthor = {Whitcomb, Kathleen M.},
+  author = {Whitcomb, Kathleen},
   title = {Quasi-{B}ayesian analysis using imprecise probability assessments and the generalized {B}ayes' rule},
   journal = {Theory and Decision},
   year = {2005},
@@ -338,7 +348,8 @@ Year = {1999}
 }
 
 @article{2003:hjort,
-    Author = {N.L. Hjort and G. Claeskens},
+    Longauthor = {N. L. Hjort and G. Claeskens},
+    Author = {N. Hjort and G. Claeskens},
     Journal = {Journal of the American Statistical Association},
     Pages = {879--899},
     Title = {Frequentist model average estimators},
@@ -346,7 +357,8 @@ Year = {1999}
     Year = {2003}}
 
 @article{2003:longford,
-    Author = {N.T. Longford},
+    Longauthor = {N. T. Longford},
+    Author = {N. Longford},
     Journal = {Statistics and Computing},
     Pages = {67--80},
     Title = {An alternative to model selection in ordinary regression},
@@ -354,7 +366,8 @@ Year = {1999}
     Year = {2003}}
 
 @article{2007:utkinaugustin,
-     Author = {Utkin, L.V. and Augustin, T.},
+     Longauthor = {Utkin, L. V. and Augustin, T.},
+     Author = {Utkin, L. and Augustin, T.},
      Journal = {International Journal of Approximate Reasoning},
      Number = {3},
      Pages = {322--338},
@@ -380,7 +393,8 @@ Year = {1999}
 }
 
 @article {2004:augustin:coolen,
-    AUTHOR = {Augustin, T. and Coolen, F. P. A.},
+    LONGAUTHOR = {Augustin, T. and Coolen, F. P. A.},
+    AUTHOR = {Augustin, Thomas and Coolen, Frank},
      TITLE = {Nonparametric predictive inference and interval probability},
    JOURNAL = {Journal of Statistical Planning and Inference},
     VOLUME = {124},
@@ -405,7 +419,7 @@ Year = {1999}
 }
 
 @article{1985:fahrmeir-kaufmann,
-Author = {Fahrmeir, Ludwig and Kaufmann, H},
+Author = {Fahrmeir, Ludwig and Kaufmann, H.},
 Title = {Consistency and asymptotic normality of the maximum-likelihood estimator in generalized linear-models},
 Journal = {Annals of Statistics},
 Year = {1985},
@@ -473,7 +487,8 @@ Pages = {342--368},
 }
 
 @article{1996:higgins,
-    AUTHOR = {Julian P. T. Higgins and Anne Whitehead},
+    LONGAUTHOR = {Julian P. T. Higgins and Anne Whitehead},
+    AUTHOR = {Julian Higgins and Anne Whitehead},
      TITLE = {Borrowing strength from external trials in a meta-analysis},
    JOURNAL = {Statistics in Medicine},
     VOLUME = {15},
@@ -502,7 +517,8 @@ Pages = {342--368},
 }
 
 @incollection {1987:kyburg:ess,
-    editor = "Samuel Kotz and Norman L. Johnson and Campbell B. Read",
+    longeditor = "Samuel Kotz and Norman L. Johnson and Campbell B. Read",
+    editor = "Samuel Kotz and Norman Johnson and Campbell Read",
  booktitle = "Encyclopedia of Statistical Sciences",
      title = "Logic of Statistical Reasoning",
     author = "Henry Kyburg",
@@ -524,7 +540,8 @@ Pages = {342--368},
 }
 
 @article{2012:cattaneo-wiencierz,
-author = "Marco E.G.V. Cattaneo and Andrea Wiencierz",
+longauthor = "Marco E. G. V. Cattaneo and Andrea Wiencierz",
+author = "Marco Cattaneo and Andrea Wiencierz",
 title = "Likelihood-based Imprecise Regression ",
 journal = "International Journal of Approximate Reasoning ",
 volume = "53",
