diss: intro to chapter 3

--- a/jstp.tex
+++ b/jstp.tex
@@ -1192,6 +1192,7 @@ The authors would like to thank two anonymous referees for their very stimulatin
 
 
 \section{***The \texttt{luck} Package} %***Software***}
+\label{sec:luck}
 
 seperate section, take short description from abstract for ISIPTA'09 poster?
 
