--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -8,23 +8,27 @@ They have lead to the so-called \emph{Imprecise Dirichlet model} (IDM, see Secti
 by \textcite{1996:walley::idm}, see also \textcite{2009:bernard},
 and more generally to powerful imprecise probability models for inference
 based on i.i.d.\ exponential family sampling models by \textcite{2005:quaeghebeurcooman} and \textcite{2009:quaeghebeur::phd}.
-These models were extended by \textcite{Walter2009a} and \textcite{Walter2011a}
+These models were extended by \textcite[see Section~\ref{sec:jstp}]{Walter2009a} and \textcite[see Section~\ref{sec:isipta11}]{Walter2011a}
 to allow in addition an elegant handling of prior-data conflict.
 
-Section~\ref{sec:generalmodel} attempts to give a systematic overview on the different models discussed in the literature,
-illustrating some characteristic modelling opportunities of generalised Bayesian inference.
+Section~\ref{sec:generalmodel} attempts to give a systematic overview on these models, %the different models discussed in the literature,
+and illustrates some characteristic modelling opportunities of generalised Bayesian inference.
 
 Section~\ref{sec:alternatives} briefly discusses some alternative models based on sets of priors.***
 
-Section~\ref{sec:jstp} then investigates one model in detail, namely the model developed in \parencite{Walter2009a},
-and discusses its application to the Normal-Normal and Dirichlet-Multinomial models in more detail. ***JSTP***
+Section~\ref{sec:jstp} then presents one model in detail, namely the so-called
+\nymodel\ developed in \textcite{Walter2009a},
+and illustrates its application to the Normal-Normal and Dirichlet-Multinomial models. % in more detail. %***JSTP***
 
-***software?***
+Section~\ref{sec:luck} gives a short overview on a software implementation of \nymodel s,
+the add-on package \texttt{luck} ***citation*** for the statistical programming environment \textbf{R}. ***citation***
 
-***isipta07 summary in appendix?***
+%***isipta07 summary in appendix?***
 
-Section~\ref{sec:isipta11} presents further attempts to refine inference behaviour in the presence of \pdc,
-by two fundamentally different approaches, whose inferences nevertheless show fascinating similarities. ***ISIPTA'11***
+Section~\ref{sec:isipta11} presents attempts to further refine inference behaviour in the presence of \pdc,
+one by considering more sophisticated shapes for prior parameter sets,
+the other by a fundamentally different approach of combining inferences from two arbitrary distinct models.
+Interestingly, the inferences from the two models in Section~\ref{sec:isipta11} show nevertheless fascinating similarities. %***ISIPTA'11***
 
 %***football example?***
 
