diss: ref to luck package in Overview

--- a/intro.tex
+++ b/intro.tex
@@ -61,6 +61,11 @@ more or less in equal parts. While Gero Walter contributed central concepts and 
 along with the theoretical results, Thomas Augustin devised most of the structure,
 and contributed most of the introductory and concluding sections.***
 
+***Section~\ref{sec:luck} gives a short overview on a software implementation
+of the model presented in Section~\ref{sec:jstp}.
+Author and maintainer of this add-on package ***citation*** in Gero Walter,
+with code contributed by Norbert Krautenbacher***
+
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
 Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
