diss: intro chapter 3 and section 3.1

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -26,6 +26,8 @@ in this chapter we will now give a general introduction to the methodology of ge
 before we give a systematic discussion of models for generalised Bayesian inference with sets of conjugate priors
 in the central Section~\ref{sec:generalmodel} of this thesis.
 
+\medskip
+
 In Section~\ref{sec:ip-intro} below, we will try to outline the general theory of imprecise or interval probability,
 describing its main formulations and interpretations, and discuss the generalised Bayesian inference procedure.
 Section~\ref{sec:motivation} then gives at first some general motives for the use of imprecise probability methodology,
