--- a/intro.tex
+++ b/intro.tex
@@ -10,6 +10,9 @@
 %\item other motivations for IP? --- later
 %\end{itemize}
 
+***add diss sections to refs to own papers included in diss*** 
+
+
 \section{***Overview / Outline}
 
 %\subsection{Outline}
