--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -551,4 +551,12 @@ year = "2012",
 url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
 }
 
+  @Manual{2013:r,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2013},
+    url = {http://www.R-project.org/},
+  }
 
