diss: minor stuff in intro, hierarchical vs fuzzy

--- a/concluding.tex
+++ b/concluding.tex
@@ -72,7 +72,7 @@ although the updating of the canonical parameters \eqref{eq:canonicalupdate},
 i.e., the weighted average update step for $\yz$, and the increment step for $\nz$,
 seems very intuitive (and is central to the behaviour of the model,
 see the list of inference properties in Section~\ref{sec:gbicp-properties-criteria}),
-the shape change of $\MZ$ to $\MN$ through this updating is difficult to grasp.
+the shape change of $\MZ$ to $\MN$ through this updating and its effects on posterior inferences are difficult to grasp.
 
 although update of a single coordinate $(\nz,\yz)$ is a simple shift,
 this shift is different for different coordinates.
