--- a/defs.tex
+++ b/defs.tex
@@ -12,6 +12,7 @@
 
 \newcommand{\reals}{\mathbb{R}}
 \newcommand{\posreals}{\reals_{>0}}
+\newcommand{\posrealszero}{\reals_{\ge 0}}
 \newcommand{\naturals}{\mathbb{N}}
 
 \newcommand{\dd}{\,\mathrm{d}}
