--- a/intro.tex
+++ b/intro.tex
@@ -66,8 +66,9 @@ and contributed most of the introductory and concluding sections.***
 
 ***Section~\ref{sec:luck} gives a short overview on a software implementation
 of the model presented in Section~\ref{sec:jstp}.
-Author and maintainer of this add-on package ***citation*** in Gero Walter,
-with code contributed by Norbert Krautenbacher***
+Author and maintainer of this add-on package ***citation*** is Gero Walter,
+with Norbert Krautenbacher as a second author, who contributed code for an application
+to exponentially distributed data.
 
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
@@ -75,7 +76,8 @@ Specifically, the success probability in Bernoulli trials is denoted by $\theta$
 All three authors worked collaboratively on the work as whole but with emphasis on different parts.
 Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
 while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
-Here, it was possible to add a few explanatory paragraphs that could not appear in the original publication. 
+Here, it was possible to add a few explanatory paragraphs
+that could not appear in the original publication due to page restrictions. 
 Thomas Augustin contributed substantially to all parts of the manuscript,
 especially in the introductory and concluding sections.***
 
@@ -95,7 +97,7 @@ of Gero Walter and Thomas Augustin.
 Scalars are denoted by italic letters ($x$, $\theta$),
 whereas vectors are denoted by bold italic letters ($\vec{x}$, $\btheta$).
 Matrices are written in bold regular (i.e., non-italic) uppercase letters, like $\mbf{X}$, $\mbf{Z}$,
-and transposed matrices are marked by a raised uppercase sans serif T ($\mbf{X}^\tra$).
+and transposed matrices are marked by a raised uppercase sans serif `T' ($\mbf{X}^\tra$).
 The trace of a matrix is denoted by $\tr(\mbf{X})$;
 unit or identity matrices are denoted by $\mbf{I}$,
 sometimes with an added subscript indicating their size
@@ -112,6 +114,7 @@ is not maintained throughout most of the thesis.
 Sets or spaces are given as calligraphic uppercase letters ($\mathcal{X}$, $\Y$, $\mathcal{M}$).
 Some special sets are denoted as follows:
 the real numbers by $\reals$, positive real numbers by $\posreals$,
+nonnegative real numbers by $\posrealszero$,
 and the space of $q$-dimensional tuples of real numbers by $\reals^q$.
 
 In the Bayesian setting, prior and posterior probability distribution functions, i.e.\ densities on parameters,
@@ -147,6 +150,8 @@ Other notational conventions are declared upon introduction of the concepts they
 In this Section, we will give a short introduction to statistical inference
 and models that are used to describe random samples.
 %These introductory sections may also serve as a guide to the notation utilized.
+
+\medskip
 
 Statistical inference is about learning from data.
 It is basically concerned with inductive reasoning,
